fixed settings disabling portions of the map. Also make trails container expand on mobile

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,7 +3,8 @@ body
 .grid
   display: flex
   box-sizing: border-box
-
+  flex-flow: row wrap
+  
 .header
   text-align: center
   width: 100%
@@ -77,4 +78,9 @@ body
 /* media queries */
 @media (max-width: 800px)
   .trail__List
-    flex: 0
+    flex: 1 1 100%
+    max-height: 10000px
+  .map__options
+    z-index: 0  
+  .zVisible
+    z-index: 1
